--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="sosmed1">
                     <div class="icon"><img src="img/ig.png" alt="logo ig"></div>
-                    <div class="icon"><p>ilhamhidayatulloh</p></div>
+                    <div class="icon"><p>ilhamhidayatulloh59</p></div>
                     
                 </div>
             </div>
